Dark mode fixes

--- a/index.css
+++ b/index.css
@@ -17,7 +17,8 @@
 
 /* Button */
 .k-block-selector-button {
-  background-color: var(--color-white);
+	--icon-color: var(--color-text);
+	background: var(--item-color-back);
   border-radius: var(--button-rounded);
   font-variant-numeric: tabular-nums;
   box-shadow: var(--shadow);
@@ -51,6 +52,7 @@
 .k-block-selector-button-preview img {
   object-fit: cover;
   aspect-ratio: 16 / 9;
+  border-radius: var(--rounded-sm);
 }
 
 /* Fallback icon */
@@ -73,5 +75,5 @@
   word-wrap: break-word;
   overflow-wrap: break-word;
   padding: 0.625em 0.625em 0.6875em;
-  border-top: 1px solid var(--color-gray-250, #e8e8e8);
+  border-top: 1px solid var(--color-border);
 }
